[gd_scene load_steps=2 format=3 uid="uid://qcuv0qlwh744"]

[ext_resource type="Script" path="res://src/scenes/tamTam.gd" id="1_u0r2n"]

[node name="TamTam" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
mouse_filter = 2
script = ExtResource("1_u0r2n")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -97.5
offset_top = -15.5
offset_right = 97.5
offset_bottom = 15.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 28

[node name="LoadDAT" type="Button" parent="HBoxContainer"]
layout_mode = 2
text = "Decompress .BMPs"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -124.0
offset_top = 44.0
offset_right = 139.0
offset_bottom = 145.0
grow_horizontal = 2
grow_vertical = 2

[node name="decompButton" type="CheckBox" parent="VBoxContainer"]
layout_mode = 2
text = "Output Decompressed Files (Debug)"

[node name="removeAlphaButton" type="CheckBox" parent="VBoxContainer"]
layout_mode = 2
text = "Remove Alpha Channel in PNGs"

[node name="FILELoadDAT" type="FileDialog" parent="."]
auto_translate_mode = 1
title = "Open File(s)"
initial_position = 2
size = Vector2i(452, 400)
ok_button_text = "Open"
file_mode = 1
access = 2
filters = PackedStringArray("*.BMP")
use_native_dialog = true

[node name="FILELoadFOLDER" type="FileDialog" parent="."]
auto_translate_mode = 1
title = "Open a Directory"
initial_position = 2
size = Vector2i(452, 400)
ok_button_text = "Select Current Folder"
file_mode = 2
access = 2
use_native_dialog = true

[connection signal="pressed" from="HBoxContainer/LoadDAT" to="." method="_on_load_dat_pressed"]
[connection signal="toggled" from="VBoxContainer/decompButton" to="." method="_on_decomp_button_toggled"]
[connection signal="toggled" from="VBoxContainer/removeAlphaButton" to="." method="_on_remove_alpha_button_toggled"]
[connection signal="files_selected" from="FILELoadDAT" to="." method="_on_file_load_dat_files_selected"]
[connection signal="dir_selected" from="FILELoadFOLDER" to="." method="_on_file_load_folder_dir_selected"]
